--- a/tex/Citations.tex
+++ b/tex/Citations.tex
@@ -2,13 +2,32 @@
 \vfill 
 %\hrule 
 %\vspace{5mm}
+
+
 \begin{flushright}
-	Has anyone really been far even as decided to use 
+	Has anyone really been far
 	
-	even go want to do look more like? 
+	even as decided to use 
+	
+	even go want to do look more like? \medskip
 	
 	\textit{-- Anonymous}
+	
+	\vspace{2cm}
+	
+	Hâtez-vous lentement ; et, sans perdre courage,
+	
+	Vingt fois sur le métier remettez votre ouvrage :
+	
+	Polissez-le sans cesse et le repolissez ;
+	
+	Ajoutez quelquefois, et souvent effacez.  \medskip
+	
+	\textit{-- Nicolas Boileau}, \textbf{L'Art poétique}
+	
 \end{flushright}
+
+
 %\vspace{5mm} 
 %\hrule 
 \vfill
