--- a/tex/EtudeExperimentale.tex
+++ b/tex/EtudeExperimentale.tex
@@ -30,7 +30,7 @@ dans le cas d'une différence de température de \qty{1}{\degreeCelsius}, soit u
 
 Les quatre orientations présentées sur la figure~\ref{fig:OrientationCore} sont regroupées par deux, avec d'une part les orientations horizontales du \textsc{Tacot} `\texttt{H1}' et `\texttt{H2}' où $\psi_v=\ang{0}$ (sous-figures~\subref{fig:OrientationCore_H1} et \subref{fig:OrientationCore_H2}), et d'autre part les orientations verticales `\texttt{V1}' et `\texttt{V2}' pour lesquelles $\psi_v=\pm\ang{90}$ (sous-figures~\subref{fig:OrientationCore_V1} et \subref{fig:OrientationCore_V2}). Pour chacun de ces groupes, les résultats des expériences réalisées aux trois amplitudes décrites dans le paragraphe~§\ref{chap:MesureAvecAcou} sont présentés sur les figures~\ref{fig:HeatOnly_CHXout_H1H2} -- \ref{fig:Acou_CHXout_H1H2_High} et \ref{fig:HeatOnly_CHXout_V1V2} -- \ref{fig:Acou_CHXout_V1V2_High}, respectivement pour les orientations horizontales et verticales. Pour rappel, la temperature initiale de chaque thermocouple est soustraite dans toutes les mesures qui suivent. De plus, les mesures sont rognées de \qtyrange{0}{3500}{\second} pour que la définition du régime stationnaire soit la même pour tous les résultats (sauf dans le cas du \textsc{Tacot} horizontal à moyenne amplitude acoustique, où un problème d'acquisition contraint le découpage de \qtyrange{0}{2700}{\second}). Un rééchantillonnage à \qty{.1}{\hertz} est également appliqué aux mesures de températures pour limiter la dimension des fichiers de données.
 
-\subsubsection{Expériences avec le réfrigérateur horizontal}
+\subsubsection{Réfrigérateur horizontal}
 Pour rappel, le réfrigérateur est placé à l'horizontal dans ces expériences. Les notations suivantes sont introduites pour cette partie concernant les expériences `\texttt{H1}' et `\texttt{H2}' :
 
 \begin{itemize}
@@ -93,7 +93,7 @@ L'évolution de température $\theta$ au cours de l'expérience à l'amplitude a
 \end{figure}
 
 
-\subsubsection{Expériences avec le réfrigérateur vertical}
+\subsubsection{Réfrigérateur vertical}
 \paragraph{Sans acoustique}
 \textcolor{red}{ICI les manips heat only}
 
