--- a/tex/Citations.tex
+++ b/tex/Citations.tex
@@ -5,15 +5,15 @@
 
 
 \begin{flushright}
-	Has anyone really been far
-	
-	even as decided to use 
-	
-	even go want to do look more like? \medskip
-	
-	\textit{-- Anonymous}
-	
-	\vspace{2cm}
+%	Has anyone really been far
+%	
+%	even as decided to use 
+%	
+%	even go want to do look more like? \medskip
+%	
+%	\textit{-- Anonymous}
+%	
+%	\vspace{2cm}
 	
 	Hâtez-vous lentement ; et, sans perdre courage,
 	
@@ -23,7 +23,7 @@
 	
 	Ajoutez quelquefois, et souvent effacez.  \medskip
 	
-	\textit{-- Nicolas Boileau}, \textbf{L'Art poétique}
+	\textit{-- Nicolas Boileau}
 	
 \end{flushright}
 
