--- a/tex/DispositifExpe.tex
+++ b/tex/DispositifExpe.tex
@@ -2,7 +2,7 @@
 \mylocaltoc
 
 
-\section{Introduction}\label{chap:IntroProtocExp}
+\section{Introduction du chapitre}\label{chap:IntroProtocExp}
 Après avoir brièvement rappelé les bases de fonctionnement des machines thermoacoustiques, il est temps de décrire le réfrigérateur support de cette thèse. Le choix de la géométrie, les paramètres hydrauliques du régénérateur utilisé, et enfin la chaîne d'excitation et d'acquisition sont présentés dans la section~\ref{chap:PresentationTacot} (\nameref{chap:PresentationTacot}).
 
 La deuxième partie présentes les conditions expérimentales ainsi que les simulations théoriques réalisées sont présentées de manière globale pour pouvoir s'y référer dans les différents chapitres suivants, respectivement en section~\ref{chap:ProtocolExpe} (\nameref{chap:ProtocolExpe}) et \ref{chap:SimusRealisees} (\nameref{chap:SimusRealisees}).
